--- a/data/style.css
+++ b/data/style.css
@@ -4,17 +4,30 @@ html {
   margin: 0px auto;
   text-align: center;
   background-color: #000000;
+  color: aliceblue;
 }
+
+div {
+  text-align: center;
+}
+
+table {
+  margin-left:  auto;
+  margin-right: auto;
+}
+
 h1{
   color: rgba(62, 119, 224, 0.877);
   padding: 2vh;
 }
+
 p{
   font-size: 1.5rem;
 }
+
 .button {
   display: inline-block;
-  background-color: #008CBA;
+  background-color: blue;
   border: none;
   border-radius: 4px;
   color: white;
@@ -24,6 +37,12 @@ p{
   margin: 2px;
   cursor: pointer;
 }
+
 .button2 {
-  background-color: #f44336;
+  background-color: red;
+}
+
+.button3 {
+  background-color: green;
+  font-size: 20px;
 }
