--- a/data/style.css
+++ b/data/style.css
@@ -27,7 +27,7 @@ p{
 
 .button {
   display: inline-block;
-  background-color: blue;
+  background-color: rgba(9, 255, 0, 0.425);
   border: none;
   border-radius: 4px;
   color: white;
@@ -39,10 +39,10 @@ p{
 }
 
 .button2 {
-  background-color: red;
+  background-color: rgba(255, 38, 0, 0.932);
 }
 
 .button3 {
-  background-color: green;
+  background-color: rgb(62, 90, 167);
   font-size: 20px;
 }
